# oxiswap-crypto-contract

./: .gitignore  Cargo.toml  Forc.toml  LICENSE  README.md  fuel-toolchain.toml
crypto-factory/: Cargo.toml  Forc.toml
crypto-factory/src/: errors.sw  events.sw  main.sw
crypto-factory/tests/functions/: constructor.rs  create_pool.rs  mod.rs
crypto-factory/tests/utils/: mod.rs
crypto-pair/: Cargo.toml  Forc.toml
crypto-pair/src/: errors.sw  events.sw  main.sw  utils.sw
crypto-pair/tests/functions/: burn.rs  constructor.rs  mint.rs  mod.rs  swap.rs
crypto-pair/tests/utils/: mod.rs
crypto-router/: Cargo.toml  Forc.toml
crypto-router/src/: errors.sw  events.sw  main.sw
crypto-router/tests/functions/: add_liquidity.rs  constructor.rs  deposit.rs  mod.rs  remove_liquidity.rs  swap_exact_input.rs  swap_exact_output.rs  withdraw.rs
crypto-router/tests/utils/: mod.rs
libraries/: Forc.toml
libraries/src/: interfaces.sw  structs.sw
test-utils/: Cargo.toml
test-utils/src/: interface.rs  lib.rs  paths.rs  setup.rs  structs.rs
